# CrisisMap

./: .gitignore  README.md  package-lock.json
backend/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/api/v1/: admin.py  buildings.py  crisis.py  export.py  form_templates.py  geocode.py  health.py  map.py  photos.py  reports.py  router.py
backend/app/core/: admin_auth.py  exceptions.py  logging.py  middleware.py
backend/app/schemas/: admin.py  common.py  crisis.py  form_template.py  geocode.py  location.py  map.py  photo.py  report.py
backend/app/services/: buildings.py  crisis.py  export.py  form_template.py  geocoding.py  map.py  photos.py  reports.py  supabase.py
backend/migrations/: 001_add_reporter_name.sql  002_add_crisis_is_unlisted.sql  003_form_templates.sql  004_performance.sql  005_map_pins_nature.sql  006_admin_dashboard.sql  007_submission_channel.sql
backend/scripts/: benchmark_api.py  benchmark_baseline.json  demo_seed_result.json  seed_demo_data.py  seed_report_ids.json  seed_test_reports.py
backend/scripts/benchmark_results/: 2026-06-21T22-21-05Z.json  2026-06-21T22-30-00Z.json
backend/scripts/demo_assets/: manifest.json
backend/tests/: conftest.py  test_admin.py  test_buildings.py  test_config.py  test_crisis.py  test_export.py  test_geocode.py  test_health.py  test_reports.py
demo/: CrisisMap-Proposal.docx  assemble-2min-demo.mjs  assemble-demo.mjs  build-2min-voiceover.mjs  build-proposal-docx.py  cues-2min.json  (+7 more)
(+94 files in other folders)
